# parapilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
app/eval/: __init__.py  baseline.py  gold_set.yaml  metrics.py  run_eval.py
app/eval/results/: latest-live.json  latest.json  table-live.md  table.md
app/process/: __init__.py  engine.py  schema.py
app/process/flows/: il_divorce.yaml
app/rag/: __init__.py  citations.py  corpus.py  generate.py  retriever.py
app/rag/ingest/: __init__.py  clean.py  run_ingest.py  sources.py
app/rag/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  stub.py
app/safety/: __init__.py  disclaimers.py  refusal.py  scope.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: about.html  ask.html  base.html  roadmap.html
app/templates/partials/: answer.html  disclaimer_modal.html  footer.html  nav.html  progress_chip.html  step_detail.html
data/corpus/: cookcounty_remote.json  ilao_getting_divorce.json  illinoiscourts_forms.json  rule45_remote.json  service_and_procedure.json
tests/: conftest.py  test_app.py  test_citations.py  test_eval.py  test_generate.py  test_process_engine.py  test_retriever.py  test_scope.py
