[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parapilot"
version = "0.1.0"
description = "ParaPilot — Illinois divorce procedural navigator. Legal information, not legal advice."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Laela Zorana" }]
keywords = ["legal-tech", "rag", "fastapi", "illinois", "divorce", "access-to-justice"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]
llm = ["anthropic>=0.40", "openai>=1.40"]

[project.scripts]
parapilot-eval = "app.eval.run_eval:main"
parapilot-ingest = "app.rag.ingest.run_ingest:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
